preprocessing inn process

--- a/remmmendationsys.ipynb
+++ b/remmmendationsys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "84c1933a",
    "metadata": {},
    "outputs": [],
@@ -23,14 +23,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1edd472",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "93fd519a",
    "metadata": {},
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "993bd000",
    "metadata": {},
    "outputs": [
@@ -150,7 +142,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "de868f88",
    "metadata": {},
    "outputs": [
@@ -173,7 +165,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "69ac19f9",
    "metadata": {},
    "outputs": [
@@ -203,7 +195,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "b4842c20",
    "metadata": {},
    "outputs": [],
@@ -231,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "a147269d",
    "metadata": {},
    "outputs": [
@@ -332,7 +324,7 @@
        "2  [Thomas Newman, Sam Mendes, Anna Pinnock, John...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,30 +339,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "20b93aa3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method DataFrame.info of                                                    crew\n",
-       "0     [Stephen E. Rivkin, Rick Carter, Christopher B...\n",
-       "1     [Dariusz Wolski, Gore Verbinski, Jerry Bruckhe...\n",
-       "2             [Thomas Newman, Sam Mendes, Anna Pinnock]\n",
-       "3       [Hans Zimmer, Charles Roven, Christopher Nolan]\n",
-       "4       [Andrew Stanton, Andrew Stanton, John Lasseter]\n",
+       "<bound method DataFrame.info of                                                    cast\n",
+       "0      [Sam Worthington, Zoe Saldana, Sigourney Weaver]\n",
+       "1         [Johnny Depp, Orlando Bloom, Keira Knightley]\n",
+       "2          [Daniel Craig, Christoph Waltz, Léa Seydoux]\n",
+       "3          [Christian Bale, Michael Caine, Gary Oldman]\n",
+       "4        [Taylor Kitsch, Lynn Collins, Samantha Morton]\n",
        "...                                                 ...\n",
-       "4804  [Robert Rodriguez, Robert Rodriguez, Robert Ro...\n",
-       "4805         [Edward Burns, Edward Burns, Edward Burns]\n",
-       "4806       [Carla Hetland, Harvey Kahn, Adam Sliwinski]\n",
-       "4807                         [Daniel Hsia, Daniel Hsia]\n",
-       "4808  [Clark Peterson, Andrew Reimer, Brian Herzlinger]\n",
+       "4804  [Carlos Gallardo, Jaime de Hoyos, Peter Marqua...\n",
+       "4805       [Edward Burns, Kerry Bishé, Marsha Dietlein]\n",
+       "4806         [Eric Mabius, Kristin Booth, Crystal Lowe]\n",
+       "4807          [Daniel Henney, Eliza Coupe, Bill Paxton]\n",
+       "4808  [Drew Barrymore, Brian Herzlinger, Corey Feldman]\n",
        "\n",
        "[4806 rows x 1 columns]>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +372,7 @@
     "movies['crew'] = movies['crew'].apply(lambda x: x[:3] if isinstance(x, list) else x)\n",
     "\n",
     "movies[['cast']].info\n",
-    "movies[['crew']].info"
+    "# movies[['crew']].info"
    ]
   },
   {
